# conductor-evals

./: .gitignore  AGENT.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: model-presets.json  orkes-config.example.json
evals/coding-basics/: fizzbuzz.json  string_reverse.json
evals/conductor-skill/: connect_remote_server.json  create_and_run_workflow.json  fallback_no_cli.json  install_and_connect.json  local_server_setup.json  manage_failed_workflow.json  monitor_and_signal.json  profile_switching.json  visualize_workflow.json  write_worker.json
evals/math-basics/: add_decimals.json  add_large.json  add_negative.json  add_simple.json
evals/reasoning/: ethical_dilemma.json
evals/tool-use/: file_search.json
evals/tricky-math/: 01_easy_multiply.json  02_order_of_operations.json  03_impossible_match.json
evals/viren1/: a.json
providers/: __init__.py  claude_code_provider.py
scripts/: cli.py  compare_runs.py  helpers.py  inject_system_prompt.py  register.py  run_suite.py  server_app.py  ui.py  workers_main.py
tasks/: aggregate_results.json  execute_agent.json  parse_judge_output.json  prepare_fork_inputs.json  record_result.json  score_text_match.json  score_tool_trace.json
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/client/: App.tsx  api.ts  index.html
ui/client/components/: CaseForm.tsx  Layout.tsx  ModelSelector.tsx  ResultsTable.tsx  (+2 more)
ui/server/: conductor.ts  config.ts  index.ts  models.ts  validation.ts
workers/: agent_executor.py  aggregator.py  fork_preparer.py  scorers.py
workflows/: eval_case_run.json  eval_suite.json
(+10 files in other folders)
